--- a/resume.html
+++ b/resume.html
@@ -5,95 +5,145 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
     <style>
+:root {
+    --theme-color: #2274a5;
+}
         body {
-            font-family: Arial, sans-serif;
+	    font-family: Arial, 'Calibri Regular', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            font-size: 14px; /* Base font size */
+            font-size: 12px; /* Base font size */
         }
         .header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px; /* Reduced padding */
+            padding: 4px;
         }
         .name {
-            font-size: 30px; /* Increased font size for the name */
+	    font-family: 'Arial Black';
+            font-size: 40px;
             font-weight: bold;
-            color: #0B5563;
+	    color: var(--theme-color);
         }
         .title {
-            font-size: 12px; /* Reduced font size for the title */
+            font-size: 10px;
             font-weight: normal;
+	    margin-left: 5px;
+	    margin-top: 3px;
         }
         .contact-info {
             text-align: right;
-            font-size: 12px; /* Reduced font size for contact info */
-            line-height: 1.2; /* Reduced line height */
-            margin: 0; /* Remove default margin */
+            font-size: 10px;
+            line-height: 1.2;
+            margin: 0;
         }
         .contact-info p {
-            margin: 0; /* Remove margin between lines */
+            margin: 0;
         }
         .content {
-            padding: 10px; /* Reduced padding */
+            padding: 10px;
         }
         .section {
-            margin-bottom: 10px; /* Reduced margin between sections */
+            margin-bottom: 2px;
         }
         .section-title {
-            font-size: 18px; /* Reduced font size */
+	    font-family: 'Arial Black';
+            font-size: 24px;
             font-weight: bold;
-            color: #0B5563;
-            margin: 0; /* Remove margin */
-            padding-top: 2px; /* Add slight padding for separation */
+	    color: var(--theme-color);
+            margin-bottom: 2px;
+            padding-top: 8px;
         }
         .experience-record {
             display: flex;
-            flex-direction: column; /* Allows for vertical stacking of elements */
-            margin-bottom: 1px; /* Reduced margin */
+            flex-direction: column;
+            margin-bottom: 1px;
             width: 100%;
         }
         .experience-header {
             display: flex;
-            justify-content: space-between;
-            margin-bottom: 3px; /* Reduced margin */
+            justify-content: flex-start;
+            margin-top: 3px;
+            margin-bottom: 3px;
         }
         .experience-title {
-            font-size: 12px; /* Reduced font size */
-            font-weight: bold;
-            flex: 3;
-            min-width: 200px;
+            width: 250px;
+	    text-align: left;
+	    order: 2;
+	    font-style: italic;
         }
         .experience-location {
-            font-size: 12px; /* Reduced font size */
-            flex: 2;
-            text-align: center;
+            font-size: 13px;
+	    font-weight: bold;
+            text-align: left;
+	    order: 1;
+            width: 350px;
         }
         .experience-time {
-            font-size: 12px; /* Reduced font size */
-            color: #0B5563;
-            flex: 1;
+	    font-weight:bold;
+	    color: var(--theme-color);
             text-align: right;
+	    order: 3;
+	    margin-left: 30px;
         }
         .experience-details {
-            margin-left: 1px; /* Smaller indentation */
-            font-size: 12px; /* Smaller font size for list items */
-            margin-top: 0; /* Removed top margin */
-            line-height: 1.4; /* Consistent line height with contact info */
+            margin-left: 1px;
+            margin-top: 0;
+	    margin-bottom: 0;
+            line-height: 1.4;
 	    padding-left: 18px;
         }
         .publication-list {
             list-style-type: disc;
-            padding-left: 18px; /* Align bullets with section title */
-            margin: 0; /* Remove margin */
-            font-size: 12px; /* Smaller font size for list items */
-            line-height: 1.4; /* Consistent line height */
+            padding-left: 18px;
+            margin: 0;
+            line-height: 1.4;
+        }
+        .education-record {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 4px;
+            width: 100%;
+        }
+        .education-header {
+            display: flex;
+            justify-content: flex-start;
+            margin-bottom: 1px;
+        }
+        .education-title {
+            width: 350px;
+	    text-align: left;
+	    margin-left: 30px;
+	    order: 2;
+	    font-style: italic;
+        }
+        .education-location {
+            font-size: 13px;
+	    font-weight: bold;
+            text-align: left;
+	    order: 1;
+            width: 250px;
+        }
+        .education-time {
+	    font-weight:bold;
+	    color: var(--theme-color);
+            text-align: right;
+	    order: 3;
+	    margin-left: 30px;
+        }
+        .education-details {
+            margin-left: 1px;
+            /* font-size: 12px; */
+            margin-top: 0;
+            margin-bottom: 0;
+            line-height: 1.4;
+	    padding-left: 18px;
         }
         hr {
             border: none;
             border-top: 1px solid #ccc;
-            margin: 5px 0; /* Reduced margin */
+            margin: 0 0 4px 0;
         }
     </style>
 </head>
@@ -107,61 +157,30 @@
         <div class="contact-info">
             <p>xieyuejian@gmail.com</p>
             <p>404-518-7919</p>
-            <p>linkedin.com/in/yuejian-xie-83790727/</p>
-            <p>Sunnyvale, CA 94086</p>
+            <p>linkedin.com/in/yuejian-xie-83790727</p>
+	    <p>US Permanent Resident</p>
         </div>
     </div>
 
     <div class="content">
-        <div class="section">
-            <div class="section-title">Education</div>
-            <hr>
-            <div class="experience-record">
-                <div class="experience-header">
-                    <div class="experience-title">Computer Science PhD GPA 3.8/4.0</div>
-                    <div class="experience-location">Georgia Tech, Atlanta, US</div>
-                    <div class="experience-time">2007-2011</div>
-                </div>
-                <ul class="experience-details">
-                    <li>Efficient shared resource management in multi-core processors <b>(ISCA-2009)</b></li>
-                </ul>
-            </div>
-            <div class="experience-record">
-                <div class="experience-header">
-                    <div class="experience-title">Master of Science GPA 87/100</div>
-                    <div class="experience-location">Tsinghua University, Beijing, China</div>
-                    <div class="experience-time">2004-2007</div>
-                </div>
-                <ul class="experience-details">
-                  <li>H.264 video decoding chip architecture</li>
-		  <li> Outstanding Master Thesis Awared</li>
-                </ul>
-            </div>
-            <div class="experience-record">
-                <div class="experience-header">
-                    <div class="experience-title">Bachelor of Science GPA 84/100</div>
-                    <div class="experience-location">Tsinghua University, Beijing, China</div>
-                    <div class="experience-time">2000-2004</div>
-                </div>
-            </div>
-        </div>
 
         <div class="section">
             <div class="section-title">Experience</div>
             <hr>
             <div class="experience-record">
                 <div class="experience-header">
-                    <div class="experience-title">Performance Team Lead & Arch Committee Lead</div>
-                    <div class="experience-location">Alibaba Inc, THead, Sunnyvale, CA</div>
+                    <div class="experience-title">Perf Team Lead & Arch Group Lead</div>
+                    <div class="experience-location">Alibaba T-Head Semiconductor, Sunnyvale, CA</div>
                     <div class="experience-time">2019 - Present</div>
                 </div>
                 <ul class="experience-details">
-                    <li>128-core Arm Server SoC (Yitian-710) top level architecture design and performance projection.</li>
-                    <li>Leading server soc performance team: 1) Cycle accurate performance model 2) Pre-silicon performance verification (DV/EMU). 3) Post-silicon performance tuning.</li>
-                    <li>Test planing, benchmark porting, measurement methodology, RTL waveform analysis tool development and performance debugging.</li>
-		    <li>Gem5-like cycle accurate performance model development (python/C++): CPU core, fabric, DDR, Chiplet</li>
-		    <li>Familiar with benchmark Dhrystone, LMBench, Stream, SpecCPU, SpecJBB, LockHammer.</li>
-		    <li>THead Arch Committee lead, following industry and academia architecture innovations and organize cutting-edge architecture activities</li>
+                    <li>128-core Arm Server SoC (Yitian-710) top level architecture design, analytical perf-model and competitive analysis.</li>
+                    <li>Leading server SoC performance team: cycle accurate perf-model; novel architecture feature exploration; pre-silicon performance verification (DV/EMU); post-silicon performance tuning.</li>
+                    <li>Performance test planing, benchmark porting, performance measurement/reporting methodology, RTL waveform analysis tool development, performance debugging and simpoint methdology.</li>
+                    <li>Memory subsystem architecture design: interconnect topology, cache hierarchy, Arm CHI protocol, cache coherency, congestion control, memory ordering, MPAM, QoS, CXL memory expansion, heterogeneous computing.</li>
+		    <li>Gem5-like cycle accurate performance model development (python/C++): ARM/RISCV CPU core, fabric, DDR, Chiplet</li>
+		    <li>Benchmark evaluation: dhrystone, LMBench, Stream, SpecCPU, SpecJBB, LockHammer.</li>
+		    <li>T-Head Arch Group lead, attending industry and academia events/conferences, organizing internal architecture research activities.</li>
                 </ul>
             </div>
             <div class="experience-record">
@@ -171,14 +190,13 @@
                     <div class="experience-time">2016-2019</div>
                 </div>
                 <ul class="experience-details">
-		  <li>In-house ARM core architecture: mid-core, load store unit, MMU, prefetcher, L1/L2 cache.</li>
-		  <li>Server/Mobile SoC memory subsystem architecture: L3, fabric, memory controller</li>
+		  <li>In-house ARM core architecture: out-of-order, load store unit, MMU, prefetcher, L1/L2 cache.</li>
+		  <li>Server/Mobile SoC memory subsystem architecture: L3, fabric, memory controller.</li>
 		  <li>Cycle-accurate performance simulator development (C++) and performance simulation.</li>
 		  <li>Web/GUI based performance analysis and reporting framework development (python/WxWidget).</li>
 		  <li>Performance analysis of RTL design, waveform debugging (Verilog/Verdi), fsdb analysis.</li>
 		</ul>
 	    </div>
-
 
             <div class="experience-record">
                 <div class="experience-header">
@@ -187,9 +205,9 @@
                     <div class="experience-time">2015-2016</div>
                 </div>
                 <ul class="experience-details">
-		  <li>Cooperate with IBM for next generation server chip development based on Power8 for China market. </li>
+		  <li>Cooperate with IBM for next generation server chip development based on Power8. </li>
 		  <li>SoC architecture definition, considering area, floor plan, performance, power and system cost.</li>
-		  <li>L2, L3, Coherent interconnect, MCU unit logic design, verification and performance simulation.</li>
+		  <li>L2, L3, coherent interconnect, memory controller, verification and performance simulation.</li>
 		</ul>
 	    </div>
 
@@ -200,30 +218,56 @@
                     <div class="experience-time">2014-2015</div>
                 </div>
                 <ul class="experience-details">
-		  <li>Performance Modeling/Analysis: L2/L3 cache, Prefetcher, L1/L2 TLB, Table Walker</li>
+		  <li>Performance Modeling/Analysis: I-cache, L2/L3 cache, Prefetcher, L1/L2 TLB, Table Walker.</li>
 		</ul>
 	    </div>
 
             <div class="experience-record">
                 <div class="experience-header">
                     <div class="experience-title">Senior Design Engineer</div>
-                    <div class="experience-location">AMD Inc, Austin, TX </div>
+                    <div class="experience-location">Advanced Micro Devices (AMD), Austin, TX </div>
                     <div class="experience-time">2011-2014</div>
                 </div>
                 <ul class="experience-details">
-		  <li>Jaguar and Zen1 project, extensive experience on LSU, L1/L2 Cache, L1/L2 TLB, Prefetcher, Table Walker</li>
-		  <li>C++ simulator correlation with RTL: performance bug identification, power analysis, competitive analysis</li>
+		  <li>Jaguar and Zen1 project, extensive experience on load-store unit, L1/L2 Cache, L1/L2 TLB, prefetcher, table walker.</li>
+		  <li>C++ performance simulator correlation with RTL: performance bug identification, power analysis, competitive analysis.</li>
 		</ul>
 	    </div>
 	</div>
+        <div class="section">
+            <div class="section-title">Education</div>
+            <hr>
+            <div class="education-record">
+                <div class="education-header">
+                    <div class="education-title">PhD of Computer Science, Computer Architecture</div>
+                    <div class="education-location">Georgia Tech, Atlanta, US</div>
+                    <div class="education-time">2007-2011</div>
+                </div>
+            </div>
+            <div class="education-record">
+                <div class="education-header">
+                    <div class="education-title">Master of Science, Computer Science</div>
+                    <div class="education-location">Tsinghua University, Beijing, China</div>
+                    <div class="education-time">2004-2007</div>
+                </div>
+            </div>
+            <div class="education-record">
+                <div class="education-header">
+                    <div class="education-title">Bachelor of Science, Electrical Engineering</div>
+                    <div class="education-location">Tsinghua University, Beijing, China</div>
+                    <div class="education-time">2000-2004</div>
+                </div>
+            </div>
+        </div>
 
         <div class="section">
             <div class="section-title">Selected Publication</div>
             <hr>
             <ul class="publication-list">
-	      <li>Yuejian Xie, Gabriel H. Loh, “PIPP: Promotion/Insertion Pseudo-Partitioning of Multi-Core Shared Caches”, ISCA 2009, Austin, United States (Top computer architecture conference)  [Cited by 414]</li>
-	      <li>Yuejian Xie, Gabriel H. Loh, “Dynamic Classification of Program Memory Behaviors in CMPs”, The 2nd CMP-MSI Workshop conjunction with ISCA 2008, Beijing, China [Cited by 170]</li>
-	      <li>Gabriel H. Loh, Samantika Subramaniam, Yuejian Xie, “Zesto: A Cycle-Level Simulator for Highly Detailed Microarchitecture Exploration”, ISPASS 2009, Boston, United States [Cited by 163]</li>
+	      <li>Yuejian Xie, Gabriel H. Loh, "PIPP: Promotion/Insertion Pseudo-Partitioning of Multi-Core Shared Caches", ISCA 2009, Austin, United States (Top computer architecture conference) <em>[Cited by 426]</em></li>
+	      <li>Yuejian Xie, Gabriel H. Loh, "Dynamic Classification of Program Memory Behaviors in CMPs", The 2nd CMP-MSI Workshop conjunction with ISCA 2008, Beijing, China <em>[Cited by 173]</em></li>
+	      <li>Gabriel H. Loh, Samantika Subramaniam, Yuejian Xie, "Zesto: A Cycle-Level Simulator for Highly Detailed Microarchitecture Exploration", ISPASS 2009, Boston, United States <em>[Cited by 164]</em></li>
+	      <li>Xie, Yuejian, and Gabriel H. Loh. "Thread-aware dynamic shared cache compression in multi-core processors." 2011 IEEE 29th International Conference on Computer Design (ICCD). <em>[Cited by 15]</em></li>
             </ul>
         </div>
 
