adjust title font

--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,8 @@
 	    color: var(--theme-color);
         }
         .title {
-            font-size: 10px;
+            /* font-size: 10px; */
+	    font-family: Geneva;
             font-weight: normal;
 	    margin-left: 5px;
 	    margin-top: 3px;
